Please initial your changes (there's a key at bottom) and add a date for each
release
================================================================================
0.9.16a1 (??? 2003)
  - fixed a caching bug related to the #include directive. Thanks to Michael
  Engelhart for reporting it.[TR]
  - Tools.CGITemplate: fix bug in comment.[MO]

0.9.15 (Mar 25, 2003)
  - a minor tweak to the cleanup actions of one of the test cases [TR]

0.9.15rc2 (Mar 23, 2003)
  - Fixed a python version dependency bug related to Compiler.py's use of 
    isinstance() [TR]

0.9.15rc1 (Mar 21, 2003)
  This is just 0.9.15b1 renamed.

0.9.15b1 (Mar 17, 2003)
  - The Cheetah version of unittest now prints a blank line after each 
    traceback to separate them.  (MO)
  - .webInput() now saves the cgi.FieldStorage() instance in a global
    variable rather than recreating it each call.  That should allow the
    method to be called multiple times with POST variables outside Webware.
    (MO)
  - CheetahWrapper: no verbose output on stdout with --stdout/-p. (MO)
  - "#indent" is now undocumented.  The existing code remains intact for now.
    See the TODO file for our future plans. (MO)
  - Apply 2 unicode-support patches from Rodrigo B. de Oliveira (rodrigobamboo)
    that affected the Template and ModuleCompiler classes. (TR)
  - Template: compiling a template from a string now works if the current
    directory doesn't have write permission.  (MO)
  - remove temporary .pyo files in addition to .py and .pyc files (TR)

0.9.15a3 (Nov 10, 2002)
  - corrected a dictionary bug in the Python version of NameMapper (TR)
  - Rewrote the "cheetah" command (CheetahWrapper.py) again and added test
    cases.  New options --flat and --nobackup; --stdout is now a synonym for
    -p.  See the "cheetah compile" section in the Users' Guide for details.
    Deleted Utils.dualglob: merged into CheetahWrapper.  (MO)
  - .addToSearchList() and .prependToSearchList() are gone.  Instead of 